# simple-file-server-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: fs_api.rs  mod.rs
src/utils/: fs_utils.rs  mod.rs  tera_fn.rs
templates/: index.css  index.html  index.js
