[package]
name = "simple-file-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tera = "1.0"
rust-embed = { version = "5.0", default-features = false }
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tower-http = {version = "0.5.0",features = ["trace","fs"]}
serde = { version = "1.0.195", features = ["derive"] }

[profile.release]
lto = true
