[package]
name = "simple-file-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3",features = ["multipart"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tera = { version = "1.0",features = ["builtins"] }
rust-embed = { version = "5.9.0", default-features = false }
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tower-http = {version = "0.5.0",features = ["trace","fs"]}
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
http = "1.0.0"
log = "0.4.20"
axum_typed_multipart = "0.11.0"
tempfile = "3.8.1"
structopt = "0.3"
axum_static_include = "0.3.0"

[profile.release]
lto = true
